# demo_aruco

./: CMakeLists.txt
src/: aruco_gige_cam_calibration.cpp  charuco_gige_cam_calibration.cpp  demo_aruco.cpp
